--- a/stylesheets/fuzzy-finder.less
+++ b/stylesheets/fuzzy-finder.less
@@ -4,74 +4,77 @@
     padding: 5px 10px 5px 10px;
   }
 
-  .path, .file {
+  .path {
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    color: rgba(0, 0, 0, 0.5);
+    margin-top: -2px;
+    margin-left: 26px;
+    font-size: .9em;
   }
-}
 
-.fuzzy-finder .path {
-  color: rgba(0, 0, 0, 0.5);
-  margin-top: -2px;
-  margin-left: 26px;
-  font-size: .9em;
-}
+  .status {
+    font-family: 'Octicons Regular';
+    font-size: 16px;
+    width: 16px;
+    height: 16px;
+    margin-left: 5px;
+    -webkit-font-smoothing: antialiased;
+    color: #9d9d9d;
+    float: right;
 
-.fuzzy-finder .file:before {
-  font-family: 'Octicons Regular';
-  font-size: 16px;
-  width: 16px;
-  height: 16px;
-  margin-right: 5px;
-  margin-left: 5px;
-  -webkit-font-smoothing: antialiased;
-  color: #9d9d9d;
-}
+    &new:before {
+      position: relative;
+      top: 3px;
+      content: "\f06b";
+    }
 
-.fuzzy-finder .status {
-  font-family: 'Octicons Regular';
-  font-size: 16px;
-  width: 16px;
-  height: 16px;
-  margin-left: 5px;
-  -webkit-font-smoothing: antialiased;
-  color: #9d9d9d;
-  float: right;
-}
+    &:before {
+      position: relative;
+      top: 3px;
+      content: "\f06d";
+    }
+  }
 
-.fuzzy-finder .status.new:before {
-  position: relative;
-  top: 3px;
-  content: "\f06b";
-}
+  .file {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 
-.fuzzy-finder .status.modified:before {
-  position: relative;
-  top: 3px;
-  content: "\f06d";
-}
+    &:before {
+      font-family: 'Octicons Regular';
+      font-size: 16px;
+      width: 16px;
+      height: 16px;
+      margin-right: 5px;
+      margin-left: 5px;
+      -webkit-font-smoothing: antialiased;
+      color: #9d9d9d;
+    }
 
-.fuzzy-finder .file.text-name:before {
-  content: "\f011";
-}
+    &.text-name:before {
+      content: "\f011";
+    }
 
-.fuzzy-finder .file.image-name:before {
-  content: "\f012";
-}
+    &.image-name:before {
+      content: "\f012";
+    }
 
-.fuzzy-finder .file.compressed-name:before {
-  content: "\f013";
-}
+    &.compressed-name:before {
+      content: "\f013";
+    }
 
-.fuzzy-finder .file.pdf-name:before {
-  content: "\f014";
-}
+    &.pdf-name:before {
+      content: "\f014";
+    }
 
-.fuzzy-finder .file.readme-name:before {
-  content: "\f007";
-}
+    &.readme-name:before {
+      content: "\f007";
+    }
 
-.fuzzy-finder .file.binary-name:before {
-  content: "\f094";
+    &.binary-name:before {
+      content: "\f094";
+    }
+  }
 }
