--- a/styles/fuzzy-finder.less
+++ b/styles/fuzzy-finder.less
@@ -1,6 +1,7 @@
 @import "ui-variables";
 
 // Highlight matched text
-.select-list .list-group .two-lines .matching {
+.select-list .list-group .matching {
   color: @text-color-highlight;
+  font-weight: bold;
 }
