--- a/styles/fuzzy-finder.less
+++ b/styles/fuzzy-finder.less
@@ -1,7 +1,7 @@
 @import "ui-variables";
 
 // Highlight matched text
-.select-list .list-group .matching {
+.select-list .list-group .character-match {
   color: @text-color-highlight;
   font-weight: bold;
 }
